stretch goal 1, need to fix responsive :worried::question::eyes:

--- a/styles/sass/_body.scss
+++ b/styles/sass/_body.scss
@@ -29,11 +29,11 @@ header {
 
 main {
     background-color: $primaryColor;
-    padding-top: 150px;
+    padding: 300px 0 50px 0;
 }
 
 .bookCategory {
-    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 ul {
