--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -17,7 +17,6 @@ li {
 
 ul {
     list-style: none;
-    padding-bottom: 50px;
 }
 
 img {
