--- a/styles/style.css
+++ b/styles/style.css
@@ -252,7 +252,6 @@ li {
 
 ul {
   list-style: none;
-  padding-bottom: 50px;
 }
 
 img {
@@ -357,11 +356,11 @@ header {
 
 main {
   background-color: #DDF3F5;
-  padding-top: 150px;
+  padding: 300px 0 50px 0;
 }
 
 .bookCategory {
-  padding-top: 100px;
+  padding-bottom: 50px;
 }
 
 ul {
@@ -492,7 +491,7 @@ footer p {
   }
   .headerContainer {
     display: block;
-    padding: 75px 0;
+    padding-top: 75px;
   }
   .headerContainer .headerTitle {
     width: 100%;
@@ -508,6 +507,9 @@ footer p {
   }
   h3 {
     font-size: 3.5rem;
+  }
+  .radioButton label {
+    font-size: 3rem;
   }
 }
 
